Issue #1309104 by mcdruid: Fixed table header text alignment.

--- a/styles/naked/advanced-forum.naked.structure.css
+++ b/styles/naked/advanced-forum.naked.structure.css
@@ -111,7 +111,7 @@ ul.forum-links li {
 
 /* Header, both tables */
 .forum-table th {
-  text-align: center;
+  text-align: left;
 }
 
 /* Forum listing */
